# audioreach-graphmgr

./: CONTRIBUTING.md  Makefile.am  README.md  configure.ac
.github/workflows/: pre_merge_build.yml  qcom-preflight-checks.yml
ci/: build.sh  build_options.txt  files_to_copy.sh
ipc/DBus/agm_client/: Makefile.am
ipc/DBus/agm_client/src/: agm_client_wrapper_dbus.cpp
ipc/DBus/agm_server/: Makefile.am
ipc/DBus/agm_server/src/: agm-server-daemon.cpp
ipc/SwBinders/agm_client/: Makefile.am  configure.ac
ipc/SwBinders/agm_client/src/: agm_client_wrapper.cpp
ipc/SwBinders/agm_server/: Makefile.am  configure.ac
ipc/SwBinders/agm_server/inc/: agm_death_notifier.h  agm_server_wrapper.h
ipc/SwBinders/agm_server/src/: agm_callback.cpp  agm_death_notifier.cpp  agm_server_daemon.cpp  agm_server_wrapper.cpp  ipc_proxy_server.cpp
ipc/aidl/: Android.bp
ipc/aidl/aidlconverter/inc/agm/: BinderStatus.h
ipc/aidl/aidlconverter/src/: AgmLegacyToAidl.cpp
ipc/aidl/client/: AgmCallback.cpp  AgmClientWrapper.cpp
ipc/aidl/server/: AgmServerWrapper.cpp  AgmServerWrapper.h  Android.mk  Manifest_IAGM.xml  Service.cpp
plugins/alsalib/: Makefile.am  agmalsaplugin.pc.in
plugins/alsalib/src/: agm_ctl_plugin.c
plugins/tinyalsa/: Android.mk  Makefile.am
plugins/tinyalsa/src/: agm_compress_plugin.c  agm_mixer_plugin.c  agm_pcm_plugin.c
plugins/tinyalsa/test/: Android.mk  Makefile.am  agm_voiceui.c  agmcap.c  agmmixer.c  agmmixer.h  agmplay.c  backend_conf.xml
public_headers/: config.yml
service/: Android.mk  Makefile.am  agm.pc.in
service/inc/private/agm/: device.h  graph_module.h  session_obj.h
service/inc/public/agm/: agm_api.h  agm_list.h  utils.h
service/src/: agm.c  device.c  device_hw_ep.c  graph.c  graph_module.c  session_obj.c
snd_parser/: Makefile.am
snd_parser/configs/qcm6490/: card-defs.xml
snd_parser/configs/sdxpinn/: card-defs.xml
snd_parser/samples/: card-defs.xml
snd_parser/src/: snd-card-parser.c
